@startuml inf

' характеристические

entity actions {
    *id
    --
    name
}

entity people {
    *id
    --
    ship_id
    name
    items_id
    location_id
    action_id
}

entity locations {
    *id
    --
    ship_id
    name
    area
}

entity items {
    *id
    --
    name
    count
}



entity ships {
    *id
    --
    name
    area
}

entity fire_sirens {
    *id
    --
    ship_id
    caused_by_id
    alarming
}

entity smoke_detectors {
    *id
    --
    location_id
    triggered
    reason
}


actions }o--|| people
people ||--o{ locations
people ||--o{ items
people ||--o{ ships
ships }o--|| locations
fire_sirens ||--o{ ships
fire_sirens }o--|| smoke_detectors
smoke_detectors ||--o{ locations

@enduml